--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/common/seedLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>씨앗박물관</title>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
